Separate logic for managing shopping cart into two different services for logged and guest users